Bump version req